src/workspace/snapshots/pixi__workspace__tests__dependency_target_sets.snap
---
source: src/workspace/mod.rs
expression: "format_dependencies(workspace.default_environment().combined_dependencies(Some(Platform::Linux64)))"
---
foo = "==1.0"
libc = "==2.12"
bar = "==1.0"
wolflib = "==1.0"
banksy = "==1.0"
baz = "==1.0"
