src/workspace/snapshots/pixi__workspace__tests__target_specific_tasks-3.snap
---
source: src/workspace/mod.rs
expression: "workspace.workspace.value.tasks(Some(Platform::Linux64),\n&FeatureName::DEFAULT).unwrap()"
---
{
    TaskName(
        "test",
    ): Plain(
        TaskString {
            _inner: "test linux",
        },
    ),
}
