src/workspace/snapshots/pixi__workspace__tests__target_specific_tasks.snap
---
source: src/workspace/mod.rs
expression: "workspace.workspace.value.tasks(Some(Platform::Osx64),\n&FeatureName::DEFAULT).unwrap()"
---
{
    TaskName(
        "test",
    ): Plain(
        TaskString {
            _inner: "test multi",
        },
    ),
}
